--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4401",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
+  },
+  "engines": {
+    "node": "8.11.2",
+    "npm": "5.6.0"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.4",
     "@angular/cdk": "^6.4.6",
+    "@angular/cli": "~6.0.8",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
@@ -27,20 +34,23 @@
     "angular5-toaster": "^1.0.2",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "firebase": "^5.3.1",
     "ng2-toastr": "^4.1.2",
     "ng4-loading-spinner": "^1.2.3",
     "ngx-loading": "^1.0.14",
     "ngx-toastr": "^9.0.2",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "ts-md5": "^1.2.4",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
+    "@angular/cli": "~6.0.8",
     "@angular-devkit/build-angular": "~0.6.8",
     "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
